<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dip"
        android:layout_marginTop="8dip"
        android:background="@color/background"
        app:behavior_peekHeight="450dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:elevation="5dip"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/close_button"
                android:layout_width="40dip"
                android:layout_height="40dip"
                android:padding="4dip"
                android:layout_marginStart="4dip"
                android:contentDescription="@string/close_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"/>

        <TextView
                android:id="@+id/team_sheet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_black"
                android:textSize="18sp"
                android:padding="16dip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@tools:sample/full_names"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_marginTop="16dip"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="40dip"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_marginBottom="20dp">
            <ImageView
                    android:id="@+id/team_sheet_crest"
                    android:layout_width="90dip"
                    android:layout_height="90dip"
                    android:contentDescription="@string/team_crest"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:src="@tools:sample/avatars"/>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/player_list"
                    android:layout_width="0dip"
                    android:nestedScrollingEnabled="true"
                    android:layout_marginBottom="16dip"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dip"
                    android:layout_marginStart="4dip"
                    android:layout_marginTop="24dip"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/team_sheet_crest"
                    tools:listitem="@layout/player_list_item"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <include
            layout="@layout/error_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>