<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
            tools:showIn="@layout/activity_home">

    <item
            android:id="@+id/action_fixtures"
            android:icon="@drawable/ic_soccer"
            android:title="@string/title_fixtures"/>

    <item
            android:id="@+id/action_competition"
            android:icon="@drawable/ic_soccer_field"
            android:title="@string/title_competition"/>

</menu>
